Closed Bug 906704 Opened 12 years ago Closed 12 years ago

rotated text with synthetic bolding causes infinite loop in text drawing

Categories

(Core :: Graphics: Text, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla26

People

(Reporter: ehsan.akhgari, Assigned: jtd)

References

()

Details

(Keywords: regression)

Attachments

(3 files)

No description provided.
Flags: needinfo?(jmuizelaar)
Summary: Paul → Paul's website hangs Nightly
Attached image Profile
Flags: needinfo?(jmuizelaar)
Hey Alice, any chance you could see if you can narrow this down please? Thanks a lot!
(In reply to :Ehsan Akhgari (needinfo? me!) from comment #2) > Hey Alice, any chance you could see if you can narrow this down please? > Thanks a lot! I cannot reproduce the problem on Windows7 and Ubuntu. And I cannot test this on Mac because I do not have Mac.
Thanks, Alice! Jeff, can you please see if you can make this bug actionable?
Flags: needinfo?(jmuizelaar)
It looks like we are stuck in gfxFont::Draw() calling GlyphBufferAzure::Flush() for ever.
Component: Graphics → Layout: Text
Flags: needinfo?(jmuizelaar)
Assignee: nobody → jdaggett
Simplified testcase: http://people.mozilla.org/~jdaggett/tests/syntheticbold-rotated.html Two problems here: the matrix code in gfxContext::UserToDevice(const gfxSize& size) is wrong (yikes!) and the synthetic bolding code isn't handling the singular matrix case, so it ends up with stamps = huge number and this causes an infinite loop while drawing. Scary part is this bug has been there since Bas added it in early 2012.
Component: Layout: Text → Graphics: Text
Summary: Paul's website hangs Nightly → rotated text with synthetic bolding causes infinite loop in text drawing
Fix the matrix math error and check the result of CalcXScale.
Attachment #795895 - Flags: review?(jmuizelaar)
Reftest based on simplified testcase. This will cause the infinite loop in current trunk code and render correctly with patch.
Attachment #795897 - Flags: review?(jmuizelaar)
Attachment #795895 - Flags: review?(jmuizelaar) → review+
Attachment #795897 - Flags: review?(jmuizelaar) → review+
Looks like this is the same issue Jesse filed in bug 895051. I'll dupe that report to this one, given that the fix is being done here.
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla26
Issue is resolved - clearing old keywords - qa-wanted clean-up
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: