Bug 906704 - fix infinite loop drawing rotated synthetic bold text. r=jrmuizel